Modified smart card helper